// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button variant default should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c0:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c0::-webkit-inner-spin-button {
  height: auto;
}

.c0::-webkit-outer-spin-button {
  height: auto;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c1 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  padding: 9px 20px;
  min-height: 40px;
  color: hsl(0,0%,100%);
  background: linear-gradient(0deg,hsl(212,63%,37%) 0%,hsl(212,63%,45%) 100%);
  border-radius: 2px;
  text-align: center;
  text-shadow: 0 1px 1px hsla(214,100%,24%,0.5);
  cursor: pointer;
  border: 1px solid transparent;
}

.c1:focus {
  position: relative;
  outline: 3px solid transparent;
}

.c1:focus::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c1:hover {
  background: linear-gradient(0deg,hsl(212,63%,45%) 0%,hsl(212,63%,49%) 100%);
  outline: 2px solid transparent;
}

.c1:active {
  background: hsl(212,63%,37%);
}

.c1.fi-button--disabled,
.c1[disabled],
.c1:disabled {
  text-shadow: 0 1px 1px rgba(33,33,33,0.5);
  background: linear-gradient(0deg,hsl(202,7%,67%) 0%,hsl(202,7%,80%) 100%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c1.fi-button--disabled::after {
  border: none;
  box-shadow: none;
}

.c1.fi-button--fullwidth {
  display: block;
  width: 100%;
}

.c1.fi-button--inverted {
  background: none;
  background-color: hsl(212,63%,45%);
  border: 1px solid hsl(0,0%,100%);
  text-shadow: none;
}

.c1.fi-button--inverted:hover {
  background: linear-gradient(-180deg,hsla(0,0%,100%,0.1) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--inverted:active {
  background: none;
  background-color: hsl(212,63%,45%);
}

.c1.fi-button--inverted.fi-button--disabled,
.c1.fi-button--inverted[disabled],
.c1.fi-button--inverted:disabled {
  opacity: 0.41;
  background: none;
  background-color: none;
}

.c1.fi-button--secondary {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
}

.c1.fi-button--secondary:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary.fi-button--disabled,
.c1.fi-button--secondary[disabled],
.c1.fi-button--secondary:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-noborder {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  border: none;
  padding: 10px 20px;
  background-color: transparent;
}

.c1.fi-button--secondary-noborder:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary-noborder:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary-noborder.fi-button--disabled,
.c1.fi-button--secondary-noborder[disabled],
.c1.fi-button--secondary-noborder:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-light {
  color: hsl(212,63%,45%);
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  background: linear-gradient(0deg,hsl(215,100%,95%),hsl(215,100%,97%));
  padding: 10px 20px;
  border: none;
}

.c1.fi-button--secondary-light:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary-light:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary-light.fi-button--disabled,
.c1.fi-button--secondary-light[disabled],
.c1.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-light:hover {
  background: linear-gradient(0deg,hsl(215,100%,97%),hsl(212,63%,98%));
}

.c1.fi-button--secondary-light:active {
  background: linear-gradient(0deg,hsl(202,7%,93%),hsl(202,7%,97%));
}

.c1.fi-button--secondary-light.fi-button--disabled,
.c1.fi-button--secondary-light[disabled],
.c1.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  background: none;
  background-color: hsl(202,7%,97%);
}

.c1 > .fi-button_icon > .fi-icon {
  width: 16px;
  height: 16px;
  margin-right: 8px;
  vertical-align: middle;
  -webkit-transform: translateY(-0.1em);
  -ms-transform: translateY(-0.1em);
  transform: translateY(-0.1em);
}

.c1 > .fi-button_icon--right > .fi-icon {
  margin-right: 0;
  margin-left: 8px;
}

.c1.fi-button--icon-only {
  padding: 6px 11px;
}

.c1.fi-button--icon-only > .fi-button_icon > .fi-icon {
  margin-right: 0;
}

.c1.fi-button--icon-only > .fi-button_icon--right > .fi-icon {
  margin-left: 0;
}

.c1.fi-button--disabled > .fi-button_icon {
  cursor: not-allowed;
}

<button
  aria-disabled="false"
  class="c0 fi-button c1"
  tabindex="0"
  type="button"
>
  Button
</button>
`;

exports[`Button variant inverted should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c0:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c0::-webkit-inner-spin-button {
  height: auto;
}

.c0::-webkit-outer-spin-button {
  height: auto;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c1 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  padding: 9px 20px;
  min-height: 40px;
  color: hsl(0,0%,100%);
  background: linear-gradient(0deg,hsl(212,63%,37%) 0%,hsl(212,63%,45%) 100%);
  border-radius: 2px;
  text-align: center;
  text-shadow: 0 1px 1px hsla(214,100%,24%,0.5);
  cursor: pointer;
  border: 1px solid transparent;
}

.c1:focus {
  position: relative;
  outline: 3px solid transparent;
}

.c1:focus::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c1:hover {
  background: linear-gradient(0deg,hsl(212,63%,45%) 0%,hsl(212,63%,49%) 100%);
  outline: 2px solid transparent;
}

.c1:active {
  background: hsl(212,63%,37%);
}

.c1.fi-button--disabled,
.c1[disabled],
.c1:disabled {
  text-shadow: 0 1px 1px rgba(33,33,33,0.5);
  background: linear-gradient(0deg,hsl(202,7%,67%) 0%,hsl(202,7%,80%) 100%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c1.fi-button--disabled::after {
  border: none;
  box-shadow: none;
}

.c1.fi-button--fullwidth {
  display: block;
  width: 100%;
}

.c1.fi-button--inverted {
  background: none;
  background-color: hsl(212,63%,45%);
  border: 1px solid hsl(0,0%,100%);
  text-shadow: none;
}

.c1.fi-button--inverted:hover {
  background: linear-gradient(-180deg,hsla(0,0%,100%,0.1) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--inverted:active {
  background: none;
  background-color: hsl(212,63%,45%);
}

.c1.fi-button--inverted.fi-button--disabled,
.c1.fi-button--inverted[disabled],
.c1.fi-button--inverted:disabled {
  opacity: 0.41;
  background: none;
  background-color: none;
}

.c1.fi-button--secondary {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
}

.c1.fi-button--secondary:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary.fi-button--disabled,
.c1.fi-button--secondary[disabled],
.c1.fi-button--secondary:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-noborder {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  border: none;
  padding: 10px 20px;
  background-color: transparent;
}

.c1.fi-button--secondary-noborder:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary-noborder:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary-noborder.fi-button--disabled,
.c1.fi-button--secondary-noborder[disabled],
.c1.fi-button--secondary-noborder:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-light {
  color: hsl(212,63%,45%);
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  background: linear-gradient(0deg,hsl(215,100%,95%),hsl(215,100%,97%));
  padding: 10px 20px;
  border: none;
}

.c1.fi-button--secondary-light:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary-light:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary-light.fi-button--disabled,
.c1.fi-button--secondary-light[disabled],
.c1.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-light:hover {
  background: linear-gradient(0deg,hsl(215,100%,97%),hsl(212,63%,98%));
}

.c1.fi-button--secondary-light:active {
  background: linear-gradient(0deg,hsl(202,7%,93%),hsl(202,7%,97%));
}

.c1.fi-button--secondary-light.fi-button--disabled,
.c1.fi-button--secondary-light[disabled],
.c1.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  background: none;
  background-color: hsl(202,7%,97%);
}

.c1 > .fi-button_icon > .fi-icon {
  width: 16px;
  height: 16px;
  margin-right: 8px;
  vertical-align: middle;
  -webkit-transform: translateY(-0.1em);
  -ms-transform: translateY(-0.1em);
  transform: translateY(-0.1em);
}

.c1 > .fi-button_icon--right > .fi-icon {
  margin-right: 0;
  margin-left: 8px;
}

.c1.fi-button--icon-only {
  padding: 6px 11px;
}

.c1.fi-button--icon-only > .fi-button_icon > .fi-icon {
  margin-right: 0;
}

.c1.fi-button--icon-only > .fi-button_icon--right > .fi-icon {
  margin-left: 0;
}

.c1.fi-button--disabled > .fi-button_icon {
  cursor: not-allowed;
}

<button
  aria-disabled="false"
  class="c0 fi-button c1 fi-button--inverted"
  tabindex="0"
  type="button"
>
  Inverted button
</button>
`;

exports[`Button variant link match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c0:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c0::-webkit-inner-spin-button {
  height: auto;
}

.c0::-webkit-outer-spin-button {
  height: auto;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c1 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  padding: 9px 20px;
  min-height: 40px;
  color: hsl(0,0%,100%);
  background: linear-gradient(0deg,hsl(212,63%,37%) 0%,hsl(212,63%,45%) 100%);
  border-radius: 2px;
  text-align: center;
  text-shadow: 0 1px 1px hsla(214,100%,24%,0.5);
  cursor: pointer;
  border: 1px solid transparent;
}

.c1:focus {
  position: relative;
  outline: 3px solid transparent;
}

.c1:focus::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c1:hover {
  background: linear-gradient(0deg,hsl(212,63%,45%) 0%,hsl(212,63%,49%) 100%);
  outline: 2px solid transparent;
}

.c1:active {
  background: hsl(212,63%,37%);
}

.c1.fi-button--disabled,
.c1[disabled],
.c1:disabled {
  text-shadow: 0 1px 1px rgba(33,33,33,0.5);
  background: linear-gradient(0deg,hsl(202,7%,67%) 0%,hsl(202,7%,80%) 100%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c1.fi-button--disabled::after {
  border: none;
  box-shadow: none;
}

.c1.fi-button--fullwidth {
  display: block;
  width: 100%;
}

.c1.fi-button--inverted {
  background: none;
  background-color: hsl(212,63%,45%);
  border: 1px solid hsl(0,0%,100%);
  text-shadow: none;
}

.c1.fi-button--inverted:hover {
  background: linear-gradient(-180deg,hsla(0,0%,100%,0.1) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--inverted:active {
  background: none;
  background-color: hsl(212,63%,45%);
}

.c1.fi-button--inverted.fi-button--disabled,
.c1.fi-button--inverted[disabled],
.c1.fi-button--inverted:disabled {
  opacity: 0.41;
  background: none;
  background-color: none;
}

.c1.fi-button--secondary {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
}

.c1.fi-button--secondary:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary.fi-button--disabled,
.c1.fi-button--secondary[disabled],
.c1.fi-button--secondary:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-noborder {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  border: none;
  padding: 10px 20px;
  background-color: transparent;
}

.c1.fi-button--secondary-noborder:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary-noborder:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary-noborder.fi-button--disabled,
.c1.fi-button--secondary-noborder[disabled],
.c1.fi-button--secondary-noborder:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-light {
  color: hsl(212,63%,45%);
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  background: linear-gradient(0deg,hsl(215,100%,95%),hsl(215,100%,97%));
  padding: 10px 20px;
  border: none;
}

.c1.fi-button--secondary-light:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary-light:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary-light.fi-button--disabled,
.c1.fi-button--secondary-light[disabled],
.c1.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-light:hover {
  background: linear-gradient(0deg,hsl(215,100%,97%),hsl(212,63%,98%));
}

.c1.fi-button--secondary-light:active {
  background: linear-gradient(0deg,hsl(202,7%,93%),hsl(202,7%,97%));
}

.c1.fi-button--secondary-light.fi-button--disabled,
.c1.fi-button--secondary-light[disabled],
.c1.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  background: none;
  background-color: hsl(202,7%,97%);
}

.c1 > .fi-button_icon > .fi-icon {
  width: 16px;
  height: 16px;
  margin-right: 8px;
  vertical-align: middle;
  -webkit-transform: translateY(-0.1em);
  -ms-transform: translateY(-0.1em);
  transform: translateY(-0.1em);
}

.c1 > .fi-button_icon--right > .fi-icon {
  margin-right: 0;
  margin-left: 8px;
}

.c1.fi-button--icon-only {
  padding: 6px 11px;
}

.c1.fi-button--icon-only > .fi-button_icon > .fi-icon {
  margin-right: 0;
}

.c1.fi-button--icon-only > .fi-button_icon--right > .fi-icon {
  margin-left: 0;
}

.c1.fi-button--disabled > .fi-button_icon {
  cursor: not-allowed;
}

<button
  aria-disabled="false"
  class="c0 fi-button c1 fi-button--secondary-light"
  tabindex="0"
  type="button"
>
  Secondary light button
</button>
`;

exports[`Button variant secondary should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c0:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c0::-webkit-inner-spin-button {
  height: auto;
}

.c0::-webkit-outer-spin-button {
  height: auto;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c1 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  padding: 9px 20px;
  min-height: 40px;
  color: hsl(0,0%,100%);
  background: linear-gradient(0deg,hsl(212,63%,37%) 0%,hsl(212,63%,45%) 100%);
  border-radius: 2px;
  text-align: center;
  text-shadow: 0 1px 1px hsla(214,100%,24%,0.5);
  cursor: pointer;
  border: 1px solid transparent;
}

.c1:focus {
  position: relative;
  outline: 3px solid transparent;
}

.c1:focus::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c1:hover {
  background: linear-gradient(0deg,hsl(212,63%,45%) 0%,hsl(212,63%,49%) 100%);
  outline: 2px solid transparent;
}

.c1:active {
  background: hsl(212,63%,37%);
}

.c1.fi-button--disabled,
.c1[disabled],
.c1:disabled {
  text-shadow: 0 1px 1px rgba(33,33,33,0.5);
  background: linear-gradient(0deg,hsl(202,7%,67%) 0%,hsl(202,7%,80%) 100%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c1.fi-button--disabled::after {
  border: none;
  box-shadow: none;
}

.c1.fi-button--fullwidth {
  display: block;
  width: 100%;
}

.c1.fi-button--inverted {
  background: none;
  background-color: hsl(212,63%,45%);
  border: 1px solid hsl(0,0%,100%);
  text-shadow: none;
}

.c1.fi-button--inverted:hover {
  background: linear-gradient(-180deg,hsla(0,0%,100%,0.1) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--inverted:active {
  background: none;
  background-color: hsl(212,63%,45%);
}

.c1.fi-button--inverted.fi-button--disabled,
.c1.fi-button--inverted[disabled],
.c1.fi-button--inverted:disabled {
  opacity: 0.41;
  background: none;
  background-color: none;
}

.c1.fi-button--secondary {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
}

.c1.fi-button--secondary:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary.fi-button--disabled,
.c1.fi-button--secondary[disabled],
.c1.fi-button--secondary:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-noborder {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  border: none;
  padding: 10px 20px;
  background-color: transparent;
}

.c1.fi-button--secondary-noborder:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary-noborder:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary-noborder.fi-button--disabled,
.c1.fi-button--secondary-noborder[disabled],
.c1.fi-button--secondary-noborder:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-light {
  color: hsl(212,63%,45%);
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  background: linear-gradient(0deg,hsl(215,100%,95%),hsl(215,100%,97%));
  padding: 10px 20px;
  border: none;
}

.c1.fi-button--secondary-light:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary-light:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary-light.fi-button--disabled,
.c1.fi-button--secondary-light[disabled],
.c1.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-light:hover {
  background: linear-gradient(0deg,hsl(215,100%,97%),hsl(212,63%,98%));
}

.c1.fi-button--secondary-light:active {
  background: linear-gradient(0deg,hsl(202,7%,93%),hsl(202,7%,97%));
}

.c1.fi-button--secondary-light.fi-button--disabled,
.c1.fi-button--secondary-light[disabled],
.c1.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  background: none;
  background-color: hsl(202,7%,97%);
}

.c1 > .fi-button_icon > .fi-icon {
  width: 16px;
  height: 16px;
  margin-right: 8px;
  vertical-align: middle;
  -webkit-transform: translateY(-0.1em);
  -ms-transform: translateY(-0.1em);
  transform: translateY(-0.1em);
}

.c1 > .fi-button_icon--right > .fi-icon {
  margin-right: 0;
  margin-left: 8px;
}

.c1.fi-button--icon-only {
  padding: 6px 11px;
}

.c1.fi-button--icon-only > .fi-button_icon > .fi-icon {
  margin-right: 0;
}

.c1.fi-button--icon-only > .fi-button_icon--right > .fi-icon {
  margin-left: 0;
}

.c1.fi-button--disabled > .fi-button_icon {
  cursor: not-allowed;
}

<button
  aria-disabled="false"
  class="c0 fi-button c1 fi-button--secondary"
  tabindex="0"
  type="button"
>
  Secondary button
</button>
`;

exports[`Button variant secondaryNoBorder should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c0:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c0::-webkit-inner-spin-button {
  height: auto;
}

.c0::-webkit-outer-spin-button {
  height: auto;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c1 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  padding: 9px 20px;
  min-height: 40px;
  color: hsl(0,0%,100%);
  background: linear-gradient(0deg,hsl(212,63%,37%) 0%,hsl(212,63%,45%) 100%);
  border-radius: 2px;
  text-align: center;
  text-shadow: 0 1px 1px hsla(214,100%,24%,0.5);
  cursor: pointer;
  border: 1px solid transparent;
}

.c1:focus {
  position: relative;
  outline: 3px solid transparent;
}

.c1:focus::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c1:hover {
  background: linear-gradient(0deg,hsl(212,63%,45%) 0%,hsl(212,63%,49%) 100%);
  outline: 2px solid transparent;
}

.c1:active {
  background: hsl(212,63%,37%);
}

.c1.fi-button--disabled,
.c1[disabled],
.c1:disabled {
  text-shadow: 0 1px 1px rgba(33,33,33,0.5);
  background: linear-gradient(0deg,hsl(202,7%,67%) 0%,hsl(202,7%,80%) 100%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c1.fi-button--disabled::after {
  border: none;
  box-shadow: none;
}

.c1.fi-button--fullwidth {
  display: block;
  width: 100%;
}

.c1.fi-button--inverted {
  background: none;
  background-color: hsl(212,63%,45%);
  border: 1px solid hsl(0,0%,100%);
  text-shadow: none;
}

.c1.fi-button--inverted:hover {
  background: linear-gradient(-180deg,hsla(0,0%,100%,0.1) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--inverted:active {
  background: none;
  background-color: hsl(212,63%,45%);
}

.c1.fi-button--inverted.fi-button--disabled,
.c1.fi-button--inverted[disabled],
.c1.fi-button--inverted:disabled {
  opacity: 0.41;
  background: none;
  background-color: none;
}

.c1.fi-button--secondary {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
}

.c1.fi-button--secondary:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary.fi-button--disabled,
.c1.fi-button--secondary[disabled],
.c1.fi-button--secondary:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-noborder {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  border: none;
  padding: 10px 20px;
  background-color: transparent;
}

.c1.fi-button--secondary-noborder:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary-noborder:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary-noborder.fi-button--disabled,
.c1.fi-button--secondary-noborder[disabled],
.c1.fi-button--secondary-noborder:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-light {
  color: hsl(212,63%,45%);
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  background: linear-gradient(0deg,hsl(215,100%,95%),hsl(215,100%,97%));
  padding: 10px 20px;
  border: none;
}

.c1.fi-button--secondary-light:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary-light:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary-light.fi-button--disabled,
.c1.fi-button--secondary-light[disabled],
.c1.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-light:hover {
  background: linear-gradient(0deg,hsl(215,100%,97%),hsl(212,63%,98%));
}

.c1.fi-button--secondary-light:active {
  background: linear-gradient(0deg,hsl(202,7%,93%),hsl(202,7%,97%));
}

.c1.fi-button--secondary-light.fi-button--disabled,
.c1.fi-button--secondary-light[disabled],
.c1.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  background: none;
  background-color: hsl(202,7%,97%);
}

.c1 > .fi-button_icon > .fi-icon {
  width: 16px;
  height: 16px;
  margin-right: 8px;
  vertical-align: middle;
  -webkit-transform: translateY(-0.1em);
  -ms-transform: translateY(-0.1em);
  transform: translateY(-0.1em);
}

.c1 > .fi-button_icon--right > .fi-icon {
  margin-right: 0;
  margin-left: 8px;
}

.c1.fi-button--icon-only {
  padding: 6px 11px;
}

.c1.fi-button--icon-only > .fi-button_icon > .fi-icon {
  margin-right: 0;
}

.c1.fi-button--icon-only > .fi-button_icon--right > .fi-icon {
  margin-left: 0;
}

.c1.fi-button--disabled > .fi-button_icon {
  cursor: not-allowed;
}

<button
  aria-disabled="false"
  class="c0 fi-button c1 fi-button--secondary-noborder"
  tabindex="0"
  type="button"
>
  secondaryNoBorder button
</button>
`;
